# bonsai

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compiler.cpp  runt.toml
.github/workflows/: build-and-test.yml
apps/cd/cpu/fcl/: CMakeLists.txt  README.md  main.bonsai  main.cpp  main.h  test.sh
apps/path-tracer/: simple.bonsai
apps/pathtracer/: camera.bonsai  ray.bonsai  simple.bonsai  trace.bonsai  triangle.bonsai  (+2 more)
cmake/: FindModernLLVM.cmake  bonsai-config.cmake.in
include/: Analysis.h  Bonsai.h  CodeGen_LLVM.h  CompilerOptions.h  Error.h  ExampleTypeMutate.h  Expr.h  Float16.h  IREquality.h  IRFwdDecl.h  IRHandle.h  IRMutator.h  IRNode.h  IRPrinter.h  IRVisitor.h  IntrusivePtr.h  LLVMFwdDecl.h  LLVMIncl.h  RefCount.h  Scope.h  Stmt.h  Type.h  Utils.h
runtime/: bonsai_benchmark.h  bonsai_bytes.h  bonsai_cpp.h  bonsai_set.h  bonsai_tree.h  bonsai_vector.h  u24.h  u56.h
scripts/: generate_vector_math.py  image_diff.py  ppm_to_png.py
src/: Analysis.cpp  CodeGen_LLVM.cpp  ExampleTypeMutate.cpp  Expr.cpp  Float16.cpp  IREquality.cpp  IRMutator.cpp  IRPrinter.cpp  IRVisitor.cpp  Stmt.cpp  Type.cpp  Utils.cpp
stdlib/: aabb.bonsai  distance.bonsai  intersects.bonsai  numerics.bonsai  point.bonsai  random.bonsai  ray.bonsai  sphere.bonsai  triangle.bonsai
tests/: CMakeLists.txt  README.md  runner.cpp  test_broadcast.cpp  test_codegen_build.cpp  test_codegen_expr.cpp  test_codegen_stmt.cpp  test_expr.cpp  test_type.cpp
tests/bonsai/: CMakeLists.txt  check_output.cmake
tests/bonsai/backends/: CMakeLists.txt
tests/bonsai/backends/cpp/: CMakeLists.txt  not-exported.bonsai  not-exported.expect  simple.bonsai  simple.expect  struct.bonsai  struct.expect
tests/bonsai/backends/cuda/: CMakeLists.txt  parallel.bonsai  parallel.expect  rand.bonsai  rand.expect  rtiow-primer.bonsai  rtiow-primer.expect  simple.bonsai  simple.expect
tests/bonsai/backends/llvm/: CMakeLists.txt  dynamic-array.bonsai  dynamic-array.expect  exported-function.bonsai  exported-function.expect  float.bonsai  float.expect  index.bonsai  index.expect  isel.bonsai  isel.expect  ivector.bonsai  ivector.expect  lambda.bonsai  lambda.expect  map-func.bonsai  map-func.expect  mut-basic.bonsai  mut-basic.expect  nested-exported-function.bonsai  nested-exported-function.expect  option.bonsai  option.expect  packed-struct.bonsai  packed-struct.expect  rand-par.bonsai  rand-par.expect  rand.bonsai  rand.expect  short-circuit.bonsai  short-circuit.expect  simple.bonsai  simple.expect  struct_defaults.bonsai  struct_defaults.expect  tail-call.bonsai  tail-call.expect  type_coercion_primitive.bonsai  type_coercion_primitive.expect
tests/bonsai/correctness/: CMakeLists.txt
tests/bonsai/correctness/cpp/: CMakeLists.txt  main_simple.cpp  main_struct.cpp  main_swap.cpp  main_vec.cpp  simple.bonsai  simple.expect  struct.bonsai  struct.expect  swap.bonsai  swap.expect  vec.bonsai  vec.expect
tests/bonsai/correctness/llvm/: CMakeLists.txt  bitwise.bonsai  bitwise.expect  collapse.bonsai  collapse.expect  dce.bonsai  defer-sum.bonsai  defer-sum.expect  dynamic-array.bonsai  dynamic-array.expect  exported-function.bonsai  exported-function.expect  exported-recursive-function.bonsai  function-type.bonsai  map-func.bonsai  map-func.expect  map.bonsai  map.expect  mutability.bonsai  mutability.expect  nested-exported-function.bonsai  nested-exported-function.expect  option.bonsai  order-of-operations.bonsai  print-str.bonsai  print-str.expect  print.bonsai  print.expect  struct.bonsai  struct.expect
tests/bonsai/error/: CMakeLists.txt  bad_layout_split.bonsai  bad_layout_split.expect  bad_path_layout.bonsai  bad_path_layout.expect  f42.bonsai  f42.expect  f_rec_undef.bonsai  f_rec_undef.expect  generic_fib.bonsai  generic_fib.expect  identifier.bonsai  identifier.expect  import_cycle0.bonsai  import_cycle0.expect  import_cycle1.bonsai  import_cycle1.expect  invalid_name.bonsai  invalid_name.expect  lambda-empty-body.bonsai  lambda-empty-body.expect  lambda-no-arguments.bonsai  lambda-no-arguments.expect  mismatched_types.bonsai  mismatched_types.expect  mutability.bonsai  mutability.expect  negate-unsigned.bonsai  negate-unsigned.expect  no-return.bonsai  no-return.expect  option-dereference1.bonsai  option-dereference1.expect  option-dereference2.bonsai  option-dereference2.expect  option-dereference3.bonsai  option-dereference4.expect  optional_bool.bonsai  optional_bool.expect  string-literal.bonsai  (+11 more)
tests/bonsai/lower/: CMakeLists.txt  array.bonsai  array.expect  bvh.bonsai  bvh.expect  collision.bonsai  collision.expect  defer-dbl-buffer.bonsai  defer-dbl-buffer.expect  defer.bonsai  defer.expect  dynamic-array.bonsai  exported-function.bonsai  exported-function.expect  float.bonsai  float.expect  import_float.bonsai  import_float.expect  import_twice.bonsai  import_twice.expect  import_vec3f.bonsai  import_vec3f.expect  index.bonsai  index.expect  intersects.bonsai  ivector.bonsai  ivector.expect  lambda-parse.expect  lambda-simple.bonsai  lambda-simple.expect  lambda.bonsai  lambda.expect  logical-operation.bonsai  logical-operation.expect  map-func.bonsai  map-func.expect  multiple-options.bonsai  multiple-options.expect  negation.bonsai  negation.expect  (+32 more)
tests/bonsai/opt/: CMakeLists.txt  collapse.bonsai  collapse.expect  constant-fold.bonsai  constant-fold.expect  dce-flip-if.bonsai  dce-flip-if.expect  dce-hygiene.bonsai  dce-hygiene.expect  dce-mut.bonsai  dce-mut.expect  dce-scope.bonsai  dce-scope.expect  dce-struct.bonsai  dce-struct.expect  dce.bonsai  dce.expect  inline.bonsai  inline.expect  parallel.bonsai  parallel.expect  split.bonsai  split.expect
tests/bonsai/parsing/: CMakeLists.txt  bitwise.bonsai  bitwise.expect  call.bonsai  call.expect  export.bonsai  export.expect  extract-access.bonsai  extract-access.expect  function-type.bonsai  function-type.expect  initialize.bonsai  initialize.expect  ivector.bonsai  ivector.expect  lambda-parse.bonsai  lambda-parse.expect  parse-negation.bonsai  parse-negation.expect  print.bonsai  print.expect
(+177 files in other folders)
